--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <script>
         async function fetchStudentData() {
-            const response = await fetch('http://student-data-ashish.azurewebsites.net/');
+            const response = await fetch('https://ashish-as1.azurewebsites.net/api/ashish-function-as1?');
             const data = await response.json();
             const tableBody = document.querySelector('#studentTable tbody');
             tableBody.innerHTML = data.map(row => `<tr><td>${row.Country}</td><td>${row.StudentCount}</td></tr>`).join('');
